# dsiem-rustui

./: .gitignore  Cargo.toml  README.md  index.dev.html  index.html  tailwind.config.js
.github/workflows/: pr.yml  publish.yml
docker/: Dockerfile
scripts/: build.sh  css.sh
src/: alarm.rs  app.rs  config.rs  main.rs
