[package]
name = "dsiem-rustui"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
gloo-console = "0.2.3"
gloo-timers = "0.2.6"
reqwasm = "0.5.0"
serde = "1.0.152"
serde_json = "1.0.91"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["HtmlSelectElement"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
